Change img components to next/image component to prevent layout shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,8 +72,9 @@ color: var(--very-dark-blue);
 
 main{
 display: grid;
-justify-content: center;
+/* justify-content: center; */
 align-items: center;
+width: 100%;
 min-height: 80svh;
 margin-top: 100px;
 isolation: isolate;
