--- a/src/components/ShoeGrid/ShoeGrid.module.css
+++ b/src/components/ShoeGrid/ShoeGrid.module.css
@@ -1,10 +1,7 @@
 .wrapper{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 32px;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 32px;
     padding: clamp(0.5rem, 4.1vw - 0.6rem, 2rem) 2rem;
 
-    /* @media (max-width: 420px) {
-      padding-top: 0.5rem;
-    } */
 }
